--- a/style.css
+++ b/style.css
@@ -26,20 +26,30 @@ footer{
 }
 
 .game{
-    width: 650px;
-    height: 750px;
+    width: auto;
+    height: auto;
 }
 
 .controls{
     margin: 50px;
     height: 50px;
 
-    border-style: solid;
 }
 
 .grid{
-    margin: 50px;
-    height: 544px;
+    width: 680px;
+    height: 680px;
     display: flex;
     flex-wrap: wrap;
+    border-style: solid;
+}
+
+button{
+    font-size: 19px;
+    background-color: dodgerblue;
+    color: white;
+    border-style: none;
+
+    padding: 20px;
+    border-radius: 9%;
 }
