--- a/style.css
+++ b/style.css
@@ -26,14 +26,20 @@ footer{
 }
 
 .game{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    justify-items: center;
     width: auto;
     height: auto;
 }
 
 .controls{
+    display: flex;
     margin: 50px;
     height: 50px;
-
+    align-items: center;
+    justify-content: center;
 }
 
 .grid{
